--- a/src/public/swagger.html
+++ b/src/public/swagger.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API Documentation Season</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3/swagger-ui.css">
-  <script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3/swagger-ui-bundle.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.3/swagger-ui.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.3/swagger-ui-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
   <script>
     window.onload = function () {
       const ui = SwaggerUIBundle({
-        url: "/openapi.yaml", // Change this to the path of your Swagger YAML or JSON file
+        url: "/openapi.yaml",
         dom_id: "#swagger-ui",
         presets: [
           SwaggerUIBundle.presets.apis,
